...
        android:layout_weight="1"
        android:text="Nombre:"
        android:textAlignment="textStart"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/nombreTarjeta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10" />

    <TextView
...
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Marca:"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/spnMarcas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />

...
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Tipo Descuento:"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/spnTipoDescuento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />
...
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Descuento:"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/descuento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="numberDecimal" />

...
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Comentarios:"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/comentarios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textMultiLine" />
</LinearLayout>
...
