...
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeftPrecios"
            android:text="@string/gasoleoa"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewGasoleoAFav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLabelsPrecio"
            android:layout_toRightOf="@+id/textViewGasoleoALabelFav" />

        <TextView
...
            android:layout_marginLeft="@dimen/marginTextView"
            android:layout_toRightOf="@+id/textViewGasoleoAFav"
            android:text="@string/gasolina95"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewGasolina95Fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLabelsPrecio"
            android:layout_toRightOf="@+id/textViewGasolina95LabelFav" />

    </RelativeLayout>
...
