<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/txtMarca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="20dp"
        android:hint="Buscar..."
        android:imeOptions="actionSend"
        android:inputType="textCapSentences|textAutoCorrect"
        android:textSize="12dp" />

    <ListView
        android:id="@+id/list_marcas"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>