<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <TextView
        android:id="@+id/titleTipoCombustible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tipo de combustible: "
        android:layout_marginTop="20dp" />

    <Spinner
    android:id="@+id/spinnerFiltroPrecio"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/titlePrecioCombustible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Precio: "
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/textNumberPrecioMax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:inputType="numberDecimal"
        android:hint="€/L"
        android:digits="0123456789.,"/>





</LinearLayout>